FIx stylesheet header problems.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <div id="app">
       <div id="header">
         <div id="title"><span>Built-in card games</span> </div>
-        <div id="auth"></div>  
+        <div id="auth"><div class='g-signin2' data-onsuccess='onSignIn'></div></div>  
       </div>
       <div>
       {{ message }}
