--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,9 +15,12 @@
     <!-- The Vue.js App not include de Web Page footer.-->
     <div id="app">
       <div id="header">
-        <div id="title"><p></p>Built-in card games</p></div>
+        <div id="title"><p>Built-in card games</p></div>
         <div id="headerspace"></div>
-        <div id="auth"><div class='g-signin2' data-onsuccess='onSignIn'></div></div>  
+        <div id="auth">
+          <div v-show="signedin"><p>Player: <b>{{user}}</b></p><a href="#" onclick="signOut();">Sign out</a></div>
+          <div v-show="!signedin" class='g-signin2' data-onsuccess='onSignIn'></div>
+        </div>  
       </div>
       <div>
       {{ message }}
