Scripts problems fixed.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,10 +26,10 @@
       {{ message }}
       </div>
     </div>  
+    <script src="src/main.js"></script>
   </main>
   <footer id="footer">
     <p>B.C.G. is powered by Vue.js!</p>
   </footer>
-  <script src="src/main.js"></script>>
 </body>
 </html>
