--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,17 +19,40 @@
         <div id="headerspace"></div>
         <div id="auth">
           <div v-show="stage==1"><p>Player: <b>{{user}}</b></p><a href="#" onclick="signOut();">Sign out</a></div>
-          <div v-show="stage==0" class='g-signin2' data-onsuccess='onSignIn'></div>
+          <div v-show="stage==0"></div>
         </div>  
       </div>
       <div>
-      {{ message }}
-      </div>
+        <div v-show="stage==0">
+          <br>
+          <h2> ¡Bienvendio a Built-in Card Games! </h2>
+          <br>
+          <p> Te vamos a pedir que te identifiques para que peudas crear o unirte a una partida. Esperamos que te diviertas.</p>
+          <br>
+          <div class='g-signin2' data-onsuccess='onSignIn'></div>
+        </div>
+        <div v-show="stage==1">
+          <br>
+          <h2> Hola {{user}} </h2>
+          <br>
+          <p> Si eres el anfitrion del juego debes crear la partida, seleccionar el maso de cartas a utilizar y definir la distribución del tablero de juegos. Si, por el contrario, deseas unirte a una partida selecciona esta opción.</p>
+          <br>
+          <div class="button"><a class="button" href="#" onclick="app.createGame">Crear</a></div>
+          <div class="button"><a class="button" href="#" onclick="app.joinGame">Unirse</a></div>
+        </div>
+        <div v-show="stage==2">
+          <br>
+          <h2> Hola {{user}} </h2>
+          <br>
+          <p> Ingresa el código que te compartió tu anfitrion y unete a la partida..</p>
+          <br>
+          <div class="button"><a class="button" href="#" onclick="joinGame">Unirse</a></div>
+        </div>
     </div>  
-    <script src="src/main.js"></script>
   </main>
   <footer id="footer">
     <p>B.C.G. is powered by Vue.js!</p>
   </footer>
+  <script type="text/javascript" src="src/main.js"></script>
 </body>
 </html>
