--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
         <div id="title"><p>Built-in card games</p></div>
         <div id="headerspace"></div>
         <div id="auth">
-          <div v-show="stage==1"><p>Player: <b>{{user}}</b></p><a href="#" onclick="signOut();">Sign out</a></div>
+          <div v-show="stage!=0"><p></p><a href="#" onclick="signOut();">Sign out</a></div>
           <div v-show="stage==0"></div>
         </div>  
       </div>
@@ -37,16 +37,49 @@
           <br>
           <p> Si eres el anfitrion del juego debes crear la partida, seleccionar el maso de cartas a utilizar y definir la distribución del tablero de juegos. Si, por el contrario, deseas unirte a una partida selecciona esta opción.</p>
           <br>
-          <div class="button"><a class="button" href="#" onclick="app.createGame">Crear</a></div>
-          <div class="button"><a class="button" href="#" onclick="app.joinGame">Unirse</a></div>
+          <div class="button"><a class="button" href="#" v-on:click="createGame()">Crear</a></div>
+          <div class="button"><a class="button" href="#" v-on:click="joinGame()">Unirse</a></div>
         </div>
         <div v-show="stage==2">
           <br>
           <h2> Hola {{user}} </h2>
           <br>
+          <p> Aqui se define el juego y la cantidad de jugadores..</p>
+          <br>
+          <p> WIP </p>
+          <div class="button"><a class="button" href="#" v-on:click="setupGame()">Siguiente</a></div>
+        </div>
+        <div v-show="stage==3">
+          <br>
+          <h2> Hola {{user}} </h2>
+          <br>
           <p> Ingresa el código que te compartió tu anfitrion y unete a la partida..</p>
           <br>
-          <div class="button"><a class="button" href="#" onclick="joinGame">Unirse</a></div>
+          <input type="text">
+          <div class="button"><a class="button" href="#" v-on:click="signinGame()">Siguiente</a></div>
+        </div>
+        <div v-show="stage==4">
+          <br>
+          <h2> Hola {{user}} </h2>
+          <br>
+          <p> Se genero la partida, invite a sus amigos con el código {{gamecode}}.</p>
+          <br>
+          <div class="button"><a class="button" href="#" v-on:click="initGame()">Siguiente</a></div>
+        </div>
+        <div v-show="stage==5">
+          <br>
+          <h2> Hola {{user}} </h2>
+          <br>
+          <p> Esperando que se unan los jugadores.</p>
+          <br>
+          <div class="button"><a class="button" href="#" v-on:click="startGame()">Siguiente</a></div>
+        </div>
+        <div v-show="stage==6">
+          <br>
+          <h2> Hola {{user}} </h2>
+          <br>
+          <p> MESA DE JUEGO.</p>
+          <br>
         </div>
     </div>  
   </main>
