--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
           <br>
           <p> Te vamos a pedir que te identifiques para que peudas crear o unirte a una partida. Esperamos que te diviertas.</p>
           <br>
-          <div class='g-signin2' data-onsuccess='onSignIn'></div>
+          <div class="buttonsbar"><div class='g-signin2' data-onsuccess='onSignIn'></div></div>
         </div>
         <div v-show="stage==1">
           <br>
@@ -37,8 +37,7 @@
           <br>
           <p> Si eres el anfitrion del juego debes crear la partida, seleccionar el maso de cartas a utilizar y definir la distribución del tablero de juegos. Si, por el contrario, deseas unirte a una partida selecciona esta opción.</p>
           <br>
-          <div class="button"><a class="button" href="#" v-on:click="createGame()">Crear</a></div>
-          <div class="button"><a class="button" href="#" v-on:click="joinGame()">Unirse</a></div>
+          <div class="buttonsbar"><a class="button" href="#" v-on:click="createGame()">Crear</a><a class="button" href="#" v-on:click="joinGame()">Unirse</a></div>
         </div>
         <div v-show="stage==2">
           <br>
@@ -47,7 +46,7 @@
           <p> Aqui se define el juego y la cantidad de jugadores..</p>
           <br>
           <p> WIP </p>
-          <div class="button"><a class="button" href="#" v-on:click="setupGame()">Siguiente</a></div>
+          <div class="buttonsbar"><a class="button" href="#" v-on:click="setupGame()">Siguiente</a></div>
         </div>
         <div v-show="stage==3">
           <br>
@@ -56,7 +55,7 @@
           <p> Ingresa el código que te compartió tu anfitrion y unete a la partida..</p>
           <br>
           <input type="text">
-          <div class="button"><a class="button" href="#" v-on:click="signinGame()">Siguiente</a></div>
+          <div class="buttonsbar"><a class="button" href="#" v-on:click="signinGame()">Siguiente</a></div>
         </div>
         <div v-show="stage==4">
           <br>
@@ -64,7 +63,7 @@
           <br>
           <p> Se genero la partida, invite a sus amigos con el código {{gamecode}}.</p>
           <br>
-          <div class="button"><a class="button" href="#" v-on:click="initGame()">Siguiente</a></div>
+          <div class="buttonsbar"><a class="button" href="#" v-on:click="initGame()">Siguiente</a></div>
         </div>
         <div v-show="stage==5">
           <br>
@@ -72,7 +71,7 @@
           <br>
           <p> Esperando que se unan los jugadores.</p>
           <br>
-          <div class="button"><a class="button" href="#" v-on:click="startGame()">Siguiente</a></div>
+          <div class="buttonsbar"><a class="button" href="#" v-on:click="startGame()">Siguiente</a></div>
         </div>
         <div v-show="stage==6">
           <br>
