Change on stage titles.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,7 @@
         </div>
         <div v-show="stage==2">
           <br>
-          <h2> Hola {{user}} </h2>
+          <h2> Define el juego </h2>
           <br>
           <p> Aqui se define el juego y la cantidad de jugadores..</p>
           <br>
@@ -50,7 +50,7 @@
         </div>
         <div v-show="stage==3">
           <br>
-          <h2> Hola {{user}} </h2>
+          <h2> Unete al juego </h2>
           <br>
           <p> Ingresa el código que te compartió tu anfitrion y unete a la partida..</p>
           <br>
@@ -59,7 +59,7 @@
         </div>
         <div v-show="stage==4">
           <br>
-          <h2> Hola {{user}} </h2>
+          <h2> Invita a tus amigos </h2>
           <br>
           <p> Se genero la partida, invite a sus amigos con el código {{gamecode}}.</p>
           <br>
@@ -67,7 +67,7 @@
         </div>
         <div v-show="stage==5">
           <br>
-          <h2> Hola {{user}} </h2>
+          <h2> Espera a que tus amigos se unan al juego </h2>
           <br>
           <p> Esperando que se unan los jugadores.</p>
           <br>
@@ -75,7 +75,7 @@
         </div>
         <div v-show="stage==6">
           <br>
-          <h2> Hola {{user}} </h2>
+          <h2> Diviertete! </h2>
           <br>
           <p> MESA DE JUEGO.</p>
           <br>
